--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
 			<img th:src="@{/images/exam.svg}" alt="image">
 		</div>
 		<div class="text-box">
-			<h1 class="mb-5 text-center">Anusha Quiz App</h1>
+			<h1 class="mb-5 text-center">Spring Boot Quiz App</h1>
 			<form class="card bg-dark py-5 px-4" action="/quiz" method="POST">
 				<p>Enter Your Name</p>
 				<input type="text" name="username" />
